Change button override on small screens to stop the popup from being unclosable.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -328,7 +328,7 @@ a.navbar-brand {
     flex-basis: 80%;
   }
 
-  .btn {
+  .navbar .btn {
     visibility:hidden;
     margin-right: 0px;
   }
